0023010: Error with a .stp model during transfer from STEPCAFControl_Reader to document

Adding test case